# OpenPKR

./: CMakeLists.txt  README.md  build.sh
include/pkr/: playing_card.h  poker_card.h  poker_enum.h  poker_player.h  poker_rank.h  texas_holdem.h
src/: CMakeLists.txt  playing_card.c  poker.c  poker_card.c  poker_player.c  poker_rank.c  texas_holdem.c
test/: test.c
